--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Morocco Desert Tours for Couples: Romantic Escapes Under the Stars">
     <meta name="twitter:description" content="Discover romantic desert experiences in Morocco's Sahara with luxury camps and unforgettable adventures.">
+    <meta name="google-site-verification" content="h7HRJ59perZSdT_BMX7bDyImJQkFl_-YcUK4CZaHHG4" />
     <title>Sahara Atlas Romance: Morocco Desert Escapes for Couples</title>
     
     <style>
